# kiel

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README  asdf.toml  boiler_off.sh  boiler_on.sh  cross_compile.sh  default.toml  install_units.sh  perf.data.old  pi.sh
goserver/: .gitignore  go.mod  server.go
kieldirect/: requirements.txt  try.py
kielkanal/: .metadata  README.md  pubspec.yaml
kielkanal/android/: settings.gradle
kielkanal/android/app/: build.gradle
kielkanal/lib/: config_controller.dart  formatters.dart  main.dart  main_screen.dart
kielkanal/lib/config_controller/: base.dart  config_controller.dart  config_file.dart  sample.dart  schema.dart  strategy.dart
kielkanal/lib/config_screen/: config_screen.dart  copy_request.dart  day_screen.dart  kiel_form.dart  weekday_screen.dart  weekly_overrides.dart
kielkanal/lib/database/: config_file_db.dart  connection.dart  constants.dart  day_summary_db.dart
kielkanal/lib/day_screen/: day_screen.dart  (+2 more)
kielkanal/test/: widget_test.dart
kielkanal/web/: index.html  manifest.json
migrations/2022-03-30-153339_create_price_cells/: down.sql  up.sql
migrations/2022-04-02-172305_create_switch_records/: up.sql
migrations/2022-04-02-181607_create_configurations/: down.sql  up.sql
migrations/2022-04-03-195922_add_price_cell_moment_index/: down.sql  up.sql
migrations/2022-04-04-075813_create_power_states/: down.sql  up.sql
migrations/2022-04-04-153520_create_convars/: down.sql  up.sql
migrations/2022-04-04-154831_create_convar_strings/: down.sql  up.sql
phue/: boiler.py  pyvenv.cfg
samples/: default.toml  request.json  test_config.toml
server/: main.rs  server.py
src/: apply.rs  bar_chart.rs  config_file.rs  constants.rs  convars.rs  database.rs  holidays.rs  main.rs  models.rs  nord_pool_meta.rs  nord_pool_spot.rs  nord_pool_spot_json.rs  overrides.rs  price_cell.rs  price_fetch.rs  price_matrix.rs  proc_mutex.rs  sample_data.rs  schema.rs  strategy.rs  switch_records.rs  tariff.rs  time.rs  units.rs
src/integration_test/: mod.rs
src/strategy/: always.rs  default.rs  limit.rs  mod.rs  none.rs  power_state_model.rs  smart.rs
systemd_units/: homeguarantee.service  homeguarantee.timer  kiel.target  kielfetch.service  kielfetch.timer  kielserver.service  kieltimer.service  kieltimer.timer
(+3 files in other folders)
