[package]
name = "kiel"
version = "0.1.0"
edition = "2021"
default-run = "kiel"

# [[bin]]
# name = "server"
# path = "server/main.rs"

[dependencies]
bdays = "0.1"
chrono = "0.4"
chrono-tz = "0.8"
eyre = "0.6"
diesel = { version = "1.4", features = ["postgres", "chrono"] }
dotenv = "0.15"
fs2 = "0.4"
json = "0.12"
lazy_static = "1.4"
now = "0.1.3"
openssl = { version = "0.10", features = ["vendored"] }
# openssl = "0.10"
# reqwest = {version = "0.11.9", features = ["blocking", "rustls"]}
rust_decimal = { version = "1.22", features = ["db-diesel-postgres"] }
rust_decimal_macros = "1.22"
serde = { version = "1.0", features = ["derive"] }
# tokio = { version = "1", features = ["full"]}
toml = "0.7"
# warp = {version = "0.3", features = ["tls", "tokio-rustls"]}
whoami = "1.1"
ureq = "2.8.0"

[dev-dependencies]
rand = "0.8"
serial_test = "1.0"
