[package]
name = "kiel"
version = "0.1.0"
edition = "2021"
default-run = "kiel"

# [[bin]]
# name = "server"
# path = "server/main.rs"

[dependencies]
bdays = "0.1"
chrono = "0.4.42"
chrono-tz = "0.10.4"
eyre = "0.6"
diesel = { version = "2.3", features = ["postgres", "chrono"] }
dotenv = "0.15"
fs2 = "0.4"
json = "0.12"
lazy_static = "1.4"
now = "0.1.3"
rust_decimal = { version = "1.22", features = ["db-diesel-postgres"] }
rust_decimal_macros = "1.39.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
whoami = "1.6.1"
ureq = "2.8.0"

[dev-dependencies]
rand = "0.9.2"
serial_test = "3.2.0"
